<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30dp"
                android:fontFamily="sans-serif-black"
                android:layout_marginBottom="5dp"
                android:padding="25dp"
                android:layout_gravity="bottom" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="right"
                android:src="@drawable/dogcat" />

        </LinearLayout>

        <EditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/txtNomeHint"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/formulario"/>

        <EditText
            android:id="@+id/etTelefone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/txtNomeHintPhone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/formulario"/>

        <EditText
            android:id="@+id/etNomePet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/txtNomeHintPet"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/formulario"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/txtNomeHintEmail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/formulario"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txtPromo"
            android:ems="15"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgCl">
            <RadioButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/rb_Sim"
                android:id="@+id/rbSim"/>

            <RadioButton
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/rb_Nao"
                android:id="@+id/rbNao"/>
        </RadioGroup>

        <Spinner
            android:id="@+id/spTipoPet"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="32dp"
            android:entries="@array/tipopet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnSalvar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spTipoPet" />

    </LinearLayout>

</ScrollView>